--- a/python/run_MAD.ipynb
+++ b/python/run_MAD.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "1152c2ae-9bfa-436e-ac4b-c249f048141e",
    "metadata": {},
    "outputs": [
@@ -188,7 +188,7 @@
        "4          2.925000        3.387500      7.824547 -116.075999  32.448083  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "5a557c2d-3eb1-4b37-8ce4-0a8519d310ad",
    "metadata": {},
    "outputs": [],
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "a7573310-c66a-4876-83c1-f362e56f0630",
    "metadata": {},
    "outputs": [],
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "2bf700f5-fb53-4bb3-bb5c-9606834dc3a6",
    "metadata": {},
    "outputs": [],
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
    "id": "4a12c86e-7fb2-41f0-bda3-1bc76c7d553d",
    "metadata": {},
    "outputs": [],
@@ -258,18 +258,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 7,
    "id": "29d25cf3-e61d-41b8-ad5c-1ca8ab19de32",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1. 1. 1. ... 1. 1. 1.]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Creat change data matrix, missing values mask and initial change weights.\n",
     "dm = np.zeros((2 * nvars, infys_df_c1_c.shape[0]))\n",
@@ -284,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 23,
    "id": "f8d428e9-b001-49b0-9c45-50d13e269f2e",
    "metadata": {},
    "outputs": [
@@ -387,25 +379,57 @@
     "    iter += 1\n",
     "    \n",
     "# reshape to original image size, by including nodata pixels    \n",
-    "MADout = np.zeros((int(nvars + 1), infys_df_c1_c.shape[0]))\n",
+    "MADout = np.zeros((int(nvars), infys_df_c1_c.shape[0]))\n",
     "MADout[0:nvars, gooddataidx] = MAD\n",
-    "MADout[nvars:(nvars + 1), gooddataidx] = chisqr"
+    "#MADout[nvars:(nvars + 1), gooddataidx] = chisqr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 9,
    "id": "968bd916-4822-4fd6-b6ad-a68b3d7dcbd0",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "7413b93f-1d65-43db-90e1-8bbc022357ca",
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "np.savetxt(\"iMAD_results.csv\", np.transpose(MADout), delimiter=\",\")"
+    "# TODO add coordinates to table\n",
+    "# Pandas copied R maybe read a bit on python data frame manipulation\n",
+    "MADout = np.transpose(MADout).copy()\n",
+    "MADout_df = pd.DataFrame(MADout, columns=vars)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "448528ff-fa54-45d7-a6ae-d9d12ef69828",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MADout_df[\"X\"] = infys_df_c1[\"X\"]\n",
+    "MADout_df[\"Y\"] = infys_df_c1[\"Y\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "3c4f0efb-4bb0-4392-b928-103b8dc2b5b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MADout_df.to_csv('iMAD_results.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7413b93f-1d65-43db-90e1-8bbc022357ca",
+   "id": "dd1a5808-7929-4cd5-929b-07c79545de13",
    "metadata": {},
    "outputs": [],
    "source": []
