--- a/python_cluster/run_MAD_Clusterlevel.ipynb
+++ b/python_cluster/run_MAD_Clusterlevel.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "id": "d027cede-466a-4784-b346-bc45d8471cfe",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "id": "1152c2ae-9bfa-436e-ac4b-c249f048141e",
    "metadata": {},
    "outputs": [
@@ -70,82 +70,82 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>61958</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>1</td>\n",
        "      <td>77652</td>\n",
-       "      <td>16.103571</td>\n",
-       "      <td>3.937736</td>\n",
-       "      <td>3.367925</td>\n",
-       "      <td>15.409993</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>8.555357</td>\n",
-       "      <td>56.0</td>\n",
-       "      <td>0.430012</td>\n",
+       "      <td>12.425352</td>\n",
+       "      <td>2.443564</td>\n",
+       "      <td>5.727228</td>\n",
+       "      <td>5.241798</td>\n",
+       "      <td>15</td>\n",
+       "      <td>7.169014</td>\n",
+       "      <td>142</td>\n",
+       "      <td>0.798797</td>\n",
        "      <td>-92.433389</td>\n",
        "      <td>15.588935</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
        "      <td>28451</td>\n",
-       "      <td>10.380952</td>\n",
-       "      <td>2.209524</td>\n",
+       "      <td>11.009524</td>\n",
+       "      <td>2.766667</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>3.956920</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.909524</td>\n",
-       "      <td>21.0</td>\n",
+       "      <td>6.457110</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.819048</td>\n",
+       "      <td>21</td>\n",
        "      <td>0.276195</td>\n",
        "      <td>-99.546778</td>\n",
        "      <td>26.072916</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>55242</td>\n",
+       "      <td>17.239344</td>\n",
+       "      <td>3.632759</td>\n",
+       "      <td>3.487931</td>\n",
+       "      <td>12.143966</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6.285246</td>\n",
+       "      <td>61</td>\n",
+       "      <td>0.667716</td>\n",
+       "      <td>-104.218713</td>\n",
+       "      <td>20.403546</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>51197</td>\n",
-       "      <td>12.280889</td>\n",
-       "      <td>3.199010</td>\n",
-       "      <td>5.360500</td>\n",
-       "      <td>9.575256</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>9.168889</td>\n",
-       "      <td>225.0</td>\n",
-       "      <td>0.769687</td>\n",
-       "      <td>-88.688611</td>\n",
-       "      <td>20.654722</td>\n",
+       "      <td>2</td>\n",
+       "      <td>20795</td>\n",
+       "      <td>10.087500</td>\n",
+       "      <td>3.759524</td>\n",
+       "      <td>4.548780</td>\n",
+       "      <td>11.793714</td>\n",
+       "      <td>8</td>\n",
+       "      <td>4.585714</td>\n",
+       "      <td>56</td>\n",
+       "      <td>0.714559</td>\n",
+       "      <td>-108.957083</td>\n",
+       "      <td>27.390907</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>53152</td>\n",
-       "      <td>12.208163</td>\n",
-       "      <td>3.172527</td>\n",
-       "      <td>3.315385</td>\n",
-       "      <td>8.666242</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>5.419388</td>\n",
-       "      <td>98.0</td>\n",
-       "      <td>0.649813</td>\n",
-       "      <td>-102.826388</td>\n",
-       "      <td>20.825555</td>\n",
+       "      <td>2</td>\n",
+       "      <td>53236</td>\n",
+       "      <td>12.101266</td>\n",
+       "      <td>3.202817</td>\n",
+       "      <td>3.877465</td>\n",
+       "      <td>8.296011</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6.801266</td>\n",
+       "      <td>79</td>\n",
+       "      <td>0.657657</td>\n",
+       "      <td>-98.775463</td>\n",
+       "      <td>20.791278</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -153,41 +153,41 @@
       ],
       "text/plain": [
        "   Unnamed: 0  File  Cluster_ID     AvgDbh  AvgCrownDiameter  AvgCrownHeight  \\\n",
-       "0           1     1       61958        NaN               NaN             NaN   \n",
-       "1           2     1       77652  16.103571          3.937736        3.367925   \n",
-       "2           3     1       28451  10.380952          2.209524             NaN   \n",
-       "3           4     1       51197  12.280889          3.199010        5.360500   \n",
-       "4           5     1       53152  12.208163          3.172527        3.315385   \n",
+       "0           1     2       77652  12.425352          2.443564        5.727228   \n",
+       "1           2     2       28451  11.009524          2.766667             NaN   \n",
+       "2           3     2       55242  17.239344          3.632759        3.487931   \n",
+       "3           4     2       20795  10.087500          3.759524        4.548780   \n",
+       "4           5     2       53236  12.101266          3.202817        3.877465   \n",
        "\n",
        "   AvgCrownArea  SpeciesCount  AvgTreeHeight  TreeCount         J           X  \\\n",
-       "0           NaN           NaN            NaN        NaN       NaN         NaN   \n",
-       "1     15.409993           8.0       8.555357       56.0  0.430012  -92.433389   \n",
-       "2      3.956920           2.0       2.909524       21.0  0.276195  -99.546778   \n",
-       "3      9.575256          32.0       9.168889      225.0  0.769687  -88.688611   \n",
-       "4      8.666242           7.0       5.419388       98.0  0.649813 -102.826388   \n",
+       "0      5.241798            15       7.169014        142  0.798797  -92.433389   \n",
+       "1      6.457110             2       2.819048         21  0.276195  -99.546778   \n",
+       "2     12.143966             6       6.285246         61  0.667716 -104.218713   \n",
+       "3     11.793714             8       4.585714         56  0.714559 -108.957083   \n",
+       "4      8.296011             4       6.801266         79  0.657657  -98.775463   \n",
        "\n",
        "           Y  \n",
-       "0        NaN  \n",
-       "1  15.588935  \n",
-       "2  26.072916  \n",
-       "3  20.654722  \n",
-       "4  20.825555  "
+       "0  15.588935  \n",
+       "1  26.072916  \n",
+       "2  20.403546  \n",
+       "3  27.390907  \n",
+       "4  20.791278  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Load data for change detection as a pandas data frame.\n",
-    "infys_df =  pd.read_csv(\"../data/iMAD/iMAD_Data_13.csv\") #need to change the dataset \n",
+    "infys_df =  pd.read_csv(\"../data/iMAD/iMAD_Data_23_Constant.csv\") #need to change the dataset \n",
     "infys_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "id": "5a557c2d-3eb1-4b37-8ce4-0a8519d310ad",
    "metadata": {},
    "outputs": [],
@@ -200,13 +200,13 @@
     "# As we want to compare cycle 1 vs cycle 2 lets separate them.   \n",
     "## Stays the same for long dataformat\n",
     "## might figure out how to \n",
-    "infys_df_c1 = infys_df[infys_df['File'] == 1]\n",
+    "infys_df_c1 = infys_df[infys_df['File'] == 2]\n",
     "infys_df_c2 = infys_df[infys_df['File'] == 3]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "id": "a7573310-c66a-4876-83c1-f362e56f0630",
    "metadata": {},
    "outputs": [],
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "id": "2bf700f5-fb53-4bb3-bb5c-9606834dc3a6",
    "metadata": {},
    "outputs": [],
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "id": "4a12c86e-7fb2-41f0-bda3-1bc76c7d553d",
    "metadata": {},
    "outputs": [],
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "id": "29d25cf3-e61d-41b8-ad5c-1ca8ab19de32",
    "metadata": {},
    "outputs": [],
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "id": "f8d428e9-b001-49b0-9c45-50d13e269f2e",
    "metadata": {},
    "outputs": [
@@ -311,7 +311,9 @@
       "30\n",
       "31\n",
       "32\n",
-      "33\n"
+      "33\n",
+      "34\n",
+      "35\n"
      ]
     }
    ],
@@ -324,7 +326,7 @@
     "oldrho = np.zeros(nvars)\n",
     "iter = 0\n",
     " \n",
-    "while (delta > 0.01) and (iter < 34): \n",
+    "while (delta > 0.01) and (iter < 36): \n",
     "    print(iter)\n",
     "    # Weighted covariance matrices and means.\n",
     "    sumw = np.sum(wt)\n",
@@ -401,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "id": "7413b93f-1d65-43db-90e1-8bbc022357ca",
    "metadata": {},
    "outputs": [],
@@ -415,26 +417,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "id": "448528ff-fa54-45d7-a6ae-d9d12ef69828",
    "metadata": {},
    "outputs": [],
    "source": [
     "MADout_df[\"X\"] = infys_df_c1[\"X\"]\n",
-    "MADout_df[\"Y\"] = infys_df_c1[\"Y\"]\n",
-    "MADout_df[\"Y\"] = infys_df_c1[\"std_chg\"]\n",
-    "np.std(madout(lstone))\n",
-    "madout(lastone <2*np.std)=2"
+    "MADout_df[\"Y\"] = infys_df_c1[\"Y\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "id": "3c4f0efb-4bb0-4392-b928-103b8dc2b5b7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "MADout_df.to_csv('iMAD_results_13.csv', index=False)"
+    "MADout_df.to_csv('iMAD_results_23_Constant.csv', index=False)"
    ]
   },
   {
@@ -443,7 +442,13 @@
    "id": "dd1a5808-7929-4cd5-929b-07c79545de13",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Beta\n",
+    "\n",
+    "MADout_df[\"Y\"] = infys_df_c1[\"std_chg\"]\n",
+    "np.std(madout(lstone))\n",
+    "madout(lastone <2*np.std)=2"
+   ]
   }
  ],
  "metadata": {
